tests/snippets/errors/input_redecl.rs
fn main(a: u8, a: u8) {
    let b = 1u8;
}